<resources>
    <string name="app_name">DevBG</string>

    <!-- chat -->
    <string name="tx_btSend">Send</string>
    <string name="textMessageEmpty">Message is empty !</string>
    <string name="txFriendChat">Friend Chat</string>
    <string name="txGroupChat">Group Chat</string>
    <string name="txFriendsList">Friends List</string>
    <string name="txGroupsList">Groups List</string>
    <string name="txNoJoinedGroups">You haven\'t joined any group.</string>
    <string name="txNoFriends">You have no friend.</string>
    <string name="tx_NoNetwork">No Network !</string>
    <string name="txNoChatMsg">No any msg</string>
    <string name="txMessageInput">Enter message here</string>

    <!-- shop -->
    <string name="button">確認</string>
    <string name="Button">下一步</string>
    <string name="menu">beggar</string>
    <string name="signout">登出</string>
    <string name="edinfo">店家編輯資料</string>
    <string name="btmore">更多</string>
    <string name="textNoShopsFound">no shopspic found</string>
    <string name="textPreferencesSaved">Preferences saved</string>
    <string name="textNoCameraApp">no camera app found</string>
    <string name="textfileNotCreated">DIRECTORY_PICTURES cannot be created!</string>
    <string name="textShouldGrant">permission to access external storage should be granted</string>
    <string name="textNoImagePickerAppFound">no image picker app found</string>
    <string name="textNoImageCropAppFound">no image crop app found</string>
    <string name="textNoNetwork">no network connection available</string>
    <string name="textNoShopGameFound">no shopgame found</string>
    <string name="shopAddressLocationNotFound">ShopAddress is not found</string>
    <string name="textUpdateSuccess">update successfully</string>
    <string name="textUpdateFail">update fail</string>
    <string name="textNoShopFound">no shop found</string>
    <string name="textNoShopImageFound">no shop image found</string>
    <string name="addGame">add</string>
    <string name="textMessage">是否確認新增遊戲?</string>
    <string name="textYes">是</string>
    <string name="textNo">否</string>

    <!-- notification -->
    <string name="textNoUsersFound">沒有新通知</string>
    <string name="textFail">讀取失敗</string>
    <string name="textInsertFail">新增失敗</string>
    <string name="textInsertSuccess">新增成功</string>
    <string name="textSetAlarm">Set Alarm</string>
    <string name="textCancelAlarm">Cancel Alarm</string>
    <string name="textAlarmCancelled">Alarm cancelled</string>
    <string name="tvInputTip">請輸入通知內容：</string>
    <string name="edInputNotification" />
    <string name="btInsert">新增系統推播</string>
    <string name="btDelet">刪除系統推播</string>
    <string name="btUpdate">修改系統推播</string>
    <string name="btlist">查看系統推播</string>
    <string name="textNoNotificationsFound">沒有任何系統通知紀錄</string>
    <string name="textNoInput">請輸入系統通知內容</string>

    <!-- player -->
    <string name="tx_btPlayerSignUp">Player</string>
    <string name="tx_btShopSignUp">Shop</string>
    <string name="tx_tvPlayerAccount">Account</string>
    <string name="tx_tvPassword">Password</string>
    <string name="tx_tvPasswordConfirm">Confirm</string>
    <string name="tx_btNext">next</string>
    <string name="tx_tvFullName">FullName</string>
    <string name="tx_tvNickName">NickName</string>
    <string name="tx_tvGender">Gender</string>
    <string name="tx_tvBirthday">Birthday</string>
    <string name="tx_btSubmit">Submit</string>
    <string name="tx_tvSelectIdentity">Select Identity</string>
    <string name="txEmptyAccount">Account can not be empty</string>
    <string name="txEmptyPassword">Password can not be empty</string>
    <string name="txEmptyConfirm">PasswordConfirm can not be empty</string>
    <string name="txConfirmDifferent">Confirm is different from Password</string>
    <string name="txCanNotBeEmpty">can not be empty</string>

    <!-- friend -->
    <string name="btnNow">進行中</string>
    <string name="btnPast">歷史紀錄</string>
    <string name="tvAddNew">＋</string>
    <string name="btnSubmit">送出</string>

    <string name="textAdvertisementDate">廣告日期</string>

    <string name="textNoCameraAppFound">no camera app found</string>
    <string name="textDirNotCreated">DIRECTORY_PICTURES cannot be created</string>

    <string name="TapPay_AppID">15092</string>
    <string name="TapPay_AppKey">app_SBbD0FmoHfEaQYnes2najK1tT8jvrlTOBDzh52jN9Dzty9RFDVK3pO76AvHC</string>

    <!-- 帳戶資訊 -->
    <string name="TapPay_PartnerKey">partner_PjziL2bLKh19QAfaU6qqouhtoBg9OVMs3Z3Godw0CLfGBNfW6gxqRqK6</string>

    <!-- 商家管理 -->
    <string name="TapPay_MerchantName">TW_TAISHIN</string>
    <string name="TapPay_MerchantID">testAccount0916_TAISHIN</string>
    <string name="textCannotUseGPay">Cannot use Google Pay</string>
    <string name="textCanceled">Canceled by the user.</string>

    <string name="ADtitle">送出廣告結果</string>
    <string name="ADmessage">廣告送出成功</string>
    <string name="ADmessageFailed">廣告送出失敗</string>
    <string name="ADbtn_yes">確定</string>
    <string name="tvPurchaseType">購買方案：</string>
    <string name="tv100">x 100</string>
    <string name="tv300">x 300</string>
    <string name="tv500">x 500</string>
    <string name="tvD300">NT$  300</string>
    <string name="tvD800">NT$  800</string>
    <string name="tvD1000">NT$1,000</string>
    <string name="tvPurchase">購買</string>

    <string name="btnFriendAll">好友</string>
    <string name="btnInvited">被邀請</string>
    <string name="btnInviting">已邀請</string>
    <string name="btnDelete">刪除</string>
    <string name="btnAccept">接受</string>
    <string name="btnDecline">拒絕</string>
    <string name="notification">查看通知</string>
    <string name="fr_add">加入好友</string>
    <string name="fr_search">Search</string>
    <string name="btnChat">聊天</string>
    <string name="btnScanQR">掃描行動條碼</string>
    <string name="btnShowQR">顯示行動條碼</string>
    <string name="btnInvite">邀請</string>
    <string name="txSignUpSuccessed">Sign Up Successed</string>
    <string name="txNoShop">Can not find any shop information.</string>
    <string name="txShopGameListUpdateFailed">ShopGameList update failed !</string>

    <!-- 揪團 -->
    <string name="NotOK">資訊還沒填寫完整喔</string>
    <string name="textpMpL">人數部分填寫錯誤</string>
    <string name="textNoAreasFound">找不到資料</string>
    <string name="textNoGroupsFound">目前沒有任何揪團</string>
    <string name="timeToEarly">開團日期不能在今天以前</string>
    <string name="joinTimeToEarly">報名截止日期不能在今天以前</string>
    <string name="joinTimeError">報名截止日期不能在開團日期以後</string>
    <string name="joinMaxError">此團報名已滿</string>
    <string name="joinConditionError">抱歉，您不符合參加條件</string>
    <string name="textNogroupsCheckFound">沒有未審核的揪團</string>
    <string name="textNogroupsHaveFound">沒有已成團的揪團</string>
    <string name="textNogroupsCheckedFound">沒有已審核的揪團</string>
    <string name="textSignInError">與店家距離過遠，簽到失敗</string>
    <string name="textSignInSuccess">簽到成功</string>
    <string name="textNoMember">沒有成員</string>
    <string name="textNoImage">請選擇揪團圖片</string>
    <string name="textNoAdsFound">No Advertisement Found</string>

</resources>
