<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="40dp"
    android:paddingTop="64dp"
    tools:context="com.example.boardgame.advertisement_points.PointActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="32dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginRight="18dp"
            android:text="現有"/>
        <ImageView
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginRight="32dp"
            android:src="@drawable/gambling"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginRight="16dp"
            android:text="x"/>
        <TextView
            android:id="@+id/tvPoints"
            android:text="0"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvPurchaseType"
        android:layout_marginBottom="32dp"
        android:textSize="24sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="32dp">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginRight="6dp"
            app:srcCompat="@drawable/gambling" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:textSize="24sp"
            android:text="@string/tv100" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="55dp"
            android:textSize="24sp"
            android:text="@string/tvD300"/>
        <Button
            android:id="@+id/btn300"
            android:layout_width="44dp"
            android:layout_height="36dp"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/tvPurchase"
            android:background="@drawable/radiusbutton"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="32dp">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginRight="6dp"
            app:srcCompat="@drawable/gambling" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:textSize="24sp"
            android:text="@string/tv300" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="54dp"
            android:textSize="24sp"
            android:text="@string/tvD800"/>
        <Button
            android:id="@+id/btn800"
            android:layout_width="44dp"
            android:layout_height="36dp"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/tvPurchase"
            android:background="@drawable/radiusbutton"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="32dp">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginRight="6dp"
            app:srcCompat="@drawable/gambling" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:textSize="24sp"
            android:text="@string/tv500" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="42dp"
            android:textSize="24sp"
            android:text="@string/tvD1000"/>
        <Button
            android:id="@+id/btn1000"
            android:layout_width="44dp"
            android:layout_height="36dp"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/tvPurchase"
            android:background="@drawable/radiusbutton"/>
    </LinearLayout>

</LinearLayout>
