<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".friend.FriendMainActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnFriendAll"
            android:onClick="onButtonClick"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/btnFriendAll"
            android:textSize="24sp"/>
        <Button
            android:id="@+id/btnInvited"
            android:onClick="onButtonClick"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/btnInvited"
            android:textSize="24sp"/>
        <Button
            android:id="@+id/btnInviting"
            android:onClick="onButtonClick"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/btnInviting"
            android:textSize="24sp"/>
    </LinearLayout>

    <fragment
        android:id="@+id/fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        tools:layout="@layout/fragment_fr_all_list"
        app:navGraph="@navigation/navigation_gragh_friend" />

</LinearLayout>